crates/regent/tests/fail/non-increasing-enum-discrims.rs
fn main() {
    #[regent::bitwise]
    enum A { _0 = 1, _1 = 0 }
}
